src/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c.object
<CustomObject>
    <label>Customer Order Product History</label>
    <nameField>
        <displayFormat>COP-{000000000}</displayFormat>
        <label>Customer Order Product History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order Product History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>CHANNEL_ORDERS__Contract_End_Date__c</fullName>
        <description>The end date of the contract associated with the Product Item.</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Name__c</fullName>
        <formula>CHANNEL_ORDERS__Customer__r.CHANNEL_ORDERS__Customer_Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Tenant_Id__c</fullName>
        <label>Tenant Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>CHANNEL_ORDERS__Customer__c</referenceTo>
        <relationshipLabel>Customer Order Product History</relationshipLabel>
        <relationshipName>Customer_Order_Product_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Exception_Reason__c</fullName>
        <label>Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Order_Item_End_Date__c</fullName>
        <label>Order Item End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Order_Product_Id__c</fullName>
        <description>The OrderItem.Id for the related data in org62.</description>
        <inlineHelpText>The OrderItem.Id for the related data in org62.</inlineHelpText>
        <label>Order Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Order_Start_Date__c</fullName>
        <description>The EffectiveDate of the Order.</description>
        <inlineHelpText>The EffectiveDate of the Order.</inlineHelpText>
        <label>Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Pricebook_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Pricebook Entry</label>
        <referenceTo>CHANNEL_ORDERS__Partner_Pricebook_Entry__c</referenceTo>
        <relationshipLabel>Customer Order Product History</relationshipLabel>
        <relationshipName>Customer_Order_Product_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Name__c</fullName>
        <formula>CHANNEL_ORDERS__Partner_Pricebook_Entry__r.CHANNEL_ORDERS__Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Renewal_Quantity__c</fullName>
        <label>Renewal Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Partner Pricebook Entry</description>
        <label>Standard Partner Pricebook Entry</label>
        <referenceTo>CHANNEL_ORDERS__Partner_Pricebook_Entry__c</referenceTo>
        <relationshipLabel>Standard Partner Pricebook Entry</relationshipLabel>
        <relationshipName>Standard_Partner_Pricebook_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Standard_Product_Name__c</fullName>
        <formula>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__r.CHANNEL_ORDERS__Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Tenant_Type__c</fullName>
        <label>Tenant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Force.com</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>CHANNEL_ORDERS__All</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Customer_Name__c</columns>
        <columns>CHANNEL_ORDERS__Product_Name__c</columns>
        <columns>CHANNEL_ORDERS__Quantity__c</columns>
        <columns>CHANNEL_ORDERS__Total_Price__c</columns>
        <columns>CHANNEL_ORDERS__Contract_End_Date__c</columns>
        <columns>CHANNEL_ORDERS__Order_Product_Id__c</columns>
        <columns>CHANNEL_ORDERS__Partner_Pricebook_Entry__c</columns>
        <columns>CHANNEL_ORDERS__Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>COA All</label>
    </listViews>
    <listViews>
        <fullName>CHANNEL_ORDERS__All_Current</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Customer_Name__c</columns>
        <columns>CHANNEL_ORDERS__Product_Name__c</columns>
        <columns>CHANNEL_ORDERS__Quantity__c</columns>
        <columns>CHANNEL_ORDERS__Unit_Price__c</columns>
        <columns>CHANNEL_ORDERS__Total_Price__c</columns>
        <columns>CHANNEL_ORDERS__Order_Start_Date__c</columns>
        <columns>CHANNEL_ORDERS__Order_Item_End_Date__c</columns>
        <columns>CHANNEL_ORDERS__Order_Product_Id__c</columns>
        <columns>CHANNEL_ORDERS__Partner_Pricebook_Entry__c</columns>
        <columns>CHANNEL_ORDERS__Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CHANNEL_ORDERS__End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>COA All Current</label>
    </listViews>
    <listViews>
        <fullName>CHANNEL_ORDERS__All_Current_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Exception_Reason__c</columns>
        <columns>CHANNEL_ORDERS__Customer_Name__c</columns>
        <columns>CHANNEL_ORDERS__Quantity__c</columns>
        <columns>CHANNEL_ORDERS__Unit_Price__c</columns>
        <columns>CHANNEL_ORDERS__Total_Price__c</columns>
        <columns>CHANNEL_ORDERS__Order_Start_Date__c</columns>
        <columns>CHANNEL_ORDERS__Order_Item_End_Date__c</columns>
        <columns>CHANNEL_ORDERS__Order_Product_Id__c</columns>
        <columns>CHANNEL_ORDERS__Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CHANNEL_ORDERS__End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CHANNEL_ORDERS__Exception_Reason__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>COA All Current Exceptions</label>
    </listViews>
</CustomObject>